# drumgizmo

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.h.in  configure  configure.ac  version.h
debian/: autoreconf.after  autoreconf.before  changelog  control  copyright  postinst  postrm  rules  watch
drumgizmo/: Makefile.am  Makefile.in  audioinputenginedl.cc  audioinputenginedl.h  audiooutputenginedl.cc  audiooutputenginedl.h  drumgizmoc.cc  drumgizmoc.h  jackclient.cc  jackclient.h
drumgizmo/input/: Makefile.am  Makefile.in
drumgizmo/input/dummy/: Makefile.am  Makefile.in  dummy.cc
drumgizmo/input/jackmidi/: Makefile.am  Makefile.in  jackmidi.cc
drumgizmo/input/midifile/: Makefile.am  Makefile.in  midifile.cc
drumgizmo/input/test/: Makefile.am  Makefile.in  test.cc
drumgizmo/output/: Makefile.am  Makefile.in
drumgizmo/output/alsa/: Makefile.am  Makefile.in  alsa.cc
drumgizmo/output/dummy/: Makefile.am  Makefile.in  dummy.cc
drumgizmo/output/jackaudio/: Makefile.am  Makefile.in  jackaudio.cc
drumgizmo/output/wavfile/: Makefile.am  Makefile.in  wavfile.cc
hugin/: hugin.c  hugin.h  hugin.hpp  hugin_syslog.c  hugin_syslog.h  hugin_util.h
include/: Makefile.am  Makefile.in  audiotypes.h  event.h
lv2/: Makefile.am  Makefile.in  drumgizmo.ttl  input_lv2.cc  input_lv2.h  lv2.cc  lv2_gui.cc  lv2_gui.h  lv2_instance.h  manifest.ttl  output_lv2.cc  output_lv2.h
man/: Makefile.am  Makefile.in  drumgizmo.1
plugingui/: Makefile.am  Makefile.am.plugingui  Makefile.in  button.cc  button.h  checkbox.cc  checkbox.h  colour.cc  colour.h  combobox.cc  combobox.h  directory.cc  directory.h  eventhandler.cc  eventhandler.h  filebrowser.cc  filebrowser.h  font.cc  font.h  guievent.h  image.cc  image.h  knob.cc  knob.h  label.cc  label.h  led.cc  led.h  lineedit.cc  lineedit.h  listbox.cc  listbox.h  listboxbasic.cc  listboxbasic.h  listboxthin.cc  listboxthin.h  nativewindow.h  nativewindow_win32.cc  nativewindow_win32.h  nativewindow_x11.cc  (+26 more)
src/: Makefile.am  Makefile.am.drumgizmo  Makefile.in  audio.h  audiofile.cc  audiofile.h  audioinputengine.cc  audioinputengine.h  audioinputenginemidi.cc  audioinputenginemidi.h  audiooutputengine.cc  audiooutputengine.h  beatmapper.cc  beatmapper.h  channel.cc  channel.h  channelmixer.cc  channelmixer.h  chresampler.cc  chresampler.h  configparser.cc  configparser.h  configuration.cc  configuration.h  drumgizmo.cc  drumgizmo.h  drumkit.cc  drumkit.h  drumkitloader.cc  drumkitloader.h  drumkitparser.cc  drumkitparser.h  events.cc  events.h  instrument.cc  instrument.h  instrumentparser.cc  instrumentparser.h  message.h  messagehandler.cc  (+27 more)
test/: Makefile.am  Makefile.in  engine.cc  gui.cc  lv2.cc  lv2_test_host.cc  resampler.cc  test.cc
tools/: Makefile.in  MocList  add_file
vst/: Makefile.am  Makefile.in  Makefile.mingw32.in  constants.h  drumgizmo_vst.cc  drumgizmo_vst.h  input_vst.cc  input_vst.h  output_vst.cc  output_vst.h
