AUTOMAKE_OPTIONS = gnu
SUBDIRS = plugingui tools include src vst lv2 drumgizmo man test
DISTDIRS = plugingui tools include src vst lv2 drumgizmo man test

EXTRA_DIST = \
	version.h \
	hugin/hugin.h \
	hugin/hugin.hpp \
	hugin/hugin.c \
	hugin/hugin_util.h \
	hugin/hugin_syslog.h \
	hugin/hugin_syslog.c

