EXTRA_DIST = \
	audio.h \
	audiofile.h \
	audioinputengine.h \
	audioinputenginemidi.h \
	audiooutputengine.h \
	beatmapper.h \
	channel.h \
	channelmixer.h \
	chresampler.h \
	configuration.h \
	configparser.h \
	drumgizmo.h \
	drumkit.h \
	drumkitloader.h \
	drumkitparser.h \
	events.h \
	instrument.h \
	instrumentparser.h \
	message.h \
	messagehandler.h \
	messagereceiver.h \
	midimapparser.h \
	midimapper.h \
	mutex.h \
	nolocale.h \
	path.h \
	powerlist.h \
	rangemap.h \
	sample.h \
	saxparser.h \
	semaphore.h \
	thread.h \
	velocity.h \
	versionstr.h \
 \
	audiofile.cc \
	audioinputengine.cc \
	audioinputenginemidi.cc \
	audiooutputengine.cc \
	beatmapper.cc \
	channel.cc \
	channelmixer.cc \
	chresampler.cc \
	configuration.cc \
	configparser.cc \
	drumgizmo.cc \
	drumkit.cc \
	drumkitloader.cc \
	drumkitparser.cc \
	events.cc \
	instrument.cc \
	instrumentparser.cc \
	messagehandler.cc \
	messagereceiver.cc \
	midimapparser.cc \
	midimapper.cc \
	mutex.cc \
	path.cc \
	powerlist.cc \
	sample.cc \
	saxparser.cc \
	semaphore.cc \
	thread.cc \
	velocity.cc \
	versionstr.cc